fix: refactor scroll button styles for improved layout and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,14 +144,7 @@ main{
 }
 
 
-.scroll-button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 1 rem 0;
-  width: 70%;
-}
+
 
 
 
@@ -283,7 +276,23 @@ form button {
     letter-spacing: 1px;
     border-radius: 30px;
     box-shadow: 0 4px 15px rgba(255, 179, 236, 0.4);
-}
+    width: 70%;              
+    max-width: 300px;       
+    margin-top: 1rem;
+    align-self: center;   
+
+
+
+/*.scroll-button {
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: center;
+  
+  width: 70%;
+  align-self: center;
+}*/
+
 .scroll-button:hover {
     background: linear-gradient(135deg, #ffd6ff, #e0bbff);
     color: #6a0572;
